--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,15 @@
+
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <%= f.label :title %>
+  <%= f.text_field :title %><br>
+
+  <%= f.fields_for :ingredients do |f| %>
+    <%= f.label :quantity %>
+    <%= f.text_field :quantity %><br>
+
+    <%= f.label :name %>
+    <%= f.text_field :name  %><br>
+
+  <% end %>
+  <%= f.submit %>
 <% end %>
